# phantom-config

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  phantom-config-parser.py  setup.cfg  setup.py
.github/workflows/: tests.yml
phantom_config/: __init__.py  phantom_config.py
phantomconfig/: __init__.py  generators.py  parsers.py  phantom_config.py  phantomconfig.py
phantomconfig/tests/: test_phantomconfig.py
phantomconfig/tests/stub/: config.in  config.json  test_data.py
src/phantomconfig/: __init__.py  generators.py  parsers.py  phantomconfig.py
tests/: test_phantomconfig.py
tests/stub/: config.in  config.json  config.toml  test_data.py
