[metadata]
name = phantomconfig
version = attr: phantomconfig.__version__
author = Daniel Mentiplay
author_email = daniel.mentiplay@protonmail.com
license = MIT
url = https://github.com/dmentipl/phantom-config
description = phantom-config: parse, convert, modify, and generate Phantom config files
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy

[options]
package_dir =
    = src
packages = find:
install_requires =
    tomlkit
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    coverage[toml]
    coveralls
    flake8
    isort>=5.0
    mypy
    pytest
    twine

[flake8]
max-line-length = 88
select = C,E,F,W
ignore = E203,E501,W503
max-complexity = 10
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist

[mypy]
ignore_missing_imports = True
